Horizontal scroll bar is no longer shown (when not needed).

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -13,6 +13,9 @@ a:hover {
 #board {
     margin: 10px;
 }
+#board .row {
+    margin-right: 0px;
+}
 div.error {
     margin: 20px;
     padding: 10px;
